--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     </nav>
   </header>
-  <section>
-    <img src="assets/header_img.jpg" alt="Peri Bacalari Resim" />
+  <section style="padding-top:3rem display:inline-block">
+    <img id='Peri' src="assets/header_img.jpg" alt="Peri Bacalari Resim" width="20%" height="20%" />
 
     <h1>Peri Bacaları Tanıtımı</h1>
 
@@ -34,7 +34,8 @@
   </section>
   <section>
     <div class="container-box">
-      <p>Sadece ülkemizin değil, dünyanın en gizemli yerlerinden biri olan Kapadokya’yı gezerken derin bir merak
+      <p style="background-color: #ddb9a3;">Sadece ülkemizin değil, dünyanın en gizemli yerlerinden biri olan
+        Kapadokya’yı gezerken derin bir merak
         duyduğunuzu
         biliyoruz. ‘ Peri bacaları nasıl oluştu, insanlar peri bacalarının içlerini ustalıkla nasıl oydu, bu yeraltı
         şehirlerini kimler yaptı, o kadar insan yerin altında nasıl yaşadı ’ diye binlerce soru geliyor gezginin aklına.
