--- a/index.html
+++ b/index.html
@@ -32,20 +32,19 @@
     <div class="header-p">Sürekli açık. Ziyaret için rezervasyona gerek yoktur.</div>
 
   </section>
-  <section>
-    <div class="container-box">
-      <p style="background-color: #ddb9a3;">Sadece ülkemizin değil, dünyanın en gizemli yerlerinden biri olan
-        Kapadokya’yı gezerken derin bir merak
-        duyduğunuzu
-        biliyoruz. ‘ Peri bacaları nasıl oluştu, insanlar peri bacalarının içlerini ustalıkla nasıl oydu, bu yeraltı
-        şehirlerini kimler yaptı, o kadar insan yerin altında nasıl yaşadı ’ diye binlerce soru geliyor gezginin aklına.
-      </p>
+  <div class="container-box">
+    <p>Sadece ülkemizin değil, dünyanın en gizemli yerlerinden biri olan Kapadokya’yı gezerken derin bir merak
+      duyduğunuzu
+      biliyoruz. ‘ Peri bacaları nasıl oluştu, insanlar peri bacalarının içlerini ustalıkla nasıl oydu, bu yeraltı
+      şehirlerini kimler yaptı, o kadar insan yerin altında nasıl yaşadı ’ diye binlerce soru geliyor gezginin aklına.
+    </p>
 
 
-      <p>Peri bacaları oluşumunun bilimsel açıklaması olmasına rağmen mistik havasının da şöyle düşündürdüğü biliyoruz;
-        ‘Kapadokya eskiden perilerin cenneti miydi, yoksa doğa bir mucize mi göstermek istedi!’</p>
-    </div>
+    <p>Peri bacaları oluşumunun bilimsel açıklaması olmasına rağmen mistik havasının da şöyle düşündürdüğü biliyoruz;
+      ‘Kapadokya eskiden perilerin cenneti miydi, yoksa doğa bir mucize mi göstermek istedi!’</p>
+  </div>
 
+  <section class="orta">
     <img src="assets/hot-air-balloon.svg" alt="Baloon">
 
 
